fixed too long code component

--- a/src/components/index-page/example-code/example-code.component.scss
+++ b/src/components/index-page/example-code/example-code.component.scss
@@ -49,7 +49,7 @@
       flex-direction: column;
       align-items: center;
       margin-top: 30px;
-      height: 1020px;
+      min-height: 1020px;
       background: none;
 
       h1 {
@@ -94,7 +94,7 @@
       flex-direction: column;
       align-items: center;
       margin-top: 30px;
-      height: 1080px;
+      min-height: 1080px;
 
       h1 {
         font-size: 32px;
@@ -138,7 +138,7 @@
       flex-direction: column;
       align-items: center;
       margin-top: 30px;
-      height: 1080px;
+      min-height: 1080px;
 
       h1 {
         font-size: 32px;
