--- a/src/components/index-page/they-trust/they-trust-us.component.scss
+++ b/src/components/index-page/they-trust/they-trust-us.component.scss
@@ -2,6 +2,8 @@
 @import "../../../assets/scss/media-mixin";
 
 .ee-they-trust-us-component {
+  margin-top: 20px;
+
   h1 {
     font-family: $font-fjalla-one;
     color: $blue-grey;
